- Fixing compiler args;
Signed-off-by: rvcoutinho <me@rvcoutinho.com>