@@ -4,7 +4,7 @@
 
 	<groupId>org.coldis</groupId>
 	<artifactId>configuration</artifactId>
-	<version>2.0.19-SNAPSHOT</version>
+	<version>2.0.18</version>
 	<packaging>pom</packaging>
 
 	<name>Common configuration</name>
@@ -363,7 +363,7 @@
 							<goal>compile</goal>
 						</goals>
 						<configuration>
-							<compilerArgument>${project.config.source.main.compile.arguments}</compilerArgument>
+							<compilerArgs>-Dnet.bytebuddy.experimental=true</compilerArgs>
 							<proc>none</proc>
 							<includes>
 								<include>
